choose and feature section done without responsive

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -10,6 +10,9 @@
 .bg-color1 {
   background-color: #1a0b2e;
 }
+.bg-color2{
+  background-color: #230E3D;
+}
 body {
   max-width: 1600px;
   width: 100%;
