--- a/styles/about.css
+++ b/styles/about.css
@@ -47,6 +47,127 @@
   color: #ffffff;
   opacity: 0.8;
 }
+/*------------------------- Choose section------------- */
+.choose-section {
+  padding-top: 120px;
+  padding: 100px 140px;
+}
+.choose-head {
+  font-size: 50px;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 60px;
+}
+.choose-grid-container {
+  max-width: 1280px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 25px;
+}
+.grid-item1 {
+  grid-row: 1 / span 2;
+  border-radius: 40px;
+  box-shadow: 0 1px 1px #9361d4;
+}
+.grid-item2 {
+  grid-column: 2 / span 2;
+  box-shadow: 0 1px 1px #9361d4;
+  border-radius: 40px;
+}
+.grid-item3 {
+  box-shadow: 0 1px 1px #9361d4;
+  border-radius: 40px;
+  grid-column: 2 / span 2;
+}
+.grid-item4 {
+  box-shadow: 0 1px 1px #9361d4;
+  border-radius: 40px;
+  grid-column: 1 / span 2;
+}
+.grid-item5 {
+  border-radius: 40px;
+  box-shadow: 0 1px 1px #9361d4;
+}
+.grid-card1 {
+  padding: 50px 20px 35px;
+}
+.grid-card2 {
+  padding: 20px;
+}
+.grid-card2 h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #ffffff;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.grid-card2 p {
+  font-size: 15px;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 24px;
+  opacity: 0.6;
+}
+.grid-card1 h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #ffffff;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.grid-card1 p {
+  font-size: 15px;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 24px;
+  opacity: 0.6;
+}
+
+/* ------------------Feature Episode section ------------- */
+.feature {
+  padding: 100px 140px 160px;
+}
+.feature-card iframe{
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.card-btm {
+  box-shadow: 0 1px 1px #9361d4;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding: 15px;
+}
+.feature-card h2 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.feature-card p {
+  font-size: 13px;
+  font-weight: 500;
+  color: #ffffff;
+  opacity: 0.6;
+  padding-top: 6px;
+  padding-bottom: 5px;
+}
+.icon-time {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
+.clock-icon {
+  width: 20px;
+  height: 20px;
+}
+.time {
+  font-size: 100px;
+  color: #00ff88;
+}
 /*--------------- Responsive for small device ------------ */
 @media screen and (max-width: 576px) {
   .about-section {
@@ -73,11 +194,10 @@
   }
   .about-list {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     padding-top: 100px;
     gap: 30px;
     padding-left: 40px;
-
   }
   .about-list h2 {
     font-size: 30px;
