host section done with responsive

--- a/styles/about.css
+++ b/styles/about.css
@@ -129,7 +129,7 @@
 .feature {
   padding: 100px 140px 160px;
 }
-.feature-card iframe{
+.feature-card iframe {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -167,6 +167,51 @@
 .time {
   font-size: 100px;
   color: #00ff88;
+}
+/*------------- Host section-------------- */
+.host-section {
+  padding: 10px 140px;
+}
+.host-section h1 {
+  font-size: 48px;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 40px;
+}
+.alex {
+  font-size: 32px;
+  font-weight: 700;
+  color: #ffffff;
+}
+.host-section p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  opacity: 0.6;
+  line-height: 24px;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+.social-icon {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 15px;
+  padding-bottom: 18px;
+}
+.host-flex {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  box-shadow: 0 1px 3px rgba(188, 151, 237, 0.4);
+  /* background-color: #351165; */
+  padding: 30px;
+  border-radius: 40px;
+}
+.host-img {
+  width: 500px;
+  height: 180px;
 }
 /*--------------- Responsive for small device ------------ */
 @media screen and (max-width: 576px) {
@@ -209,5 +254,29 @@
     font-weight: 500;
     color: #ffffff;
     opacity: 0.8;
+  }
+  /*----------  hose section ----- */
+  .host-section {
+    padding: 10px 14px;
+  }
+  .host-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+  }
+  .host-img {
+    width: 200px;
+    height: 180px;
+  }
+  .social-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+  
   }
 }
