footer sectio done with responsive

--- a/styles/about.css
+++ b/styles/about.css
@@ -170,7 +170,7 @@
 }
 /*------------- Host section-------------- */
 .host-section {
-  padding: 10px 140px;
+  padding: 10px 140px 100px;
 }
 .host-section h1 {
   font-size: 48px;
@@ -212,6 +212,47 @@
 .host-img {
   width: 500px;
   height: 180px;
+}
+
+/*------------ Footer Section --------------*/
+.footer-img {
+  position: relative;
+}
+.footer-wave {
+  position: absolute;
+  text-align: center;
+  left: 33%;
+  bottom: 100px;
+}
+.footer-head {
+  font-size: 60px;
+  font-weight: 700;
+  color: #ffffff;
+  padding-bottom: 10px;
+}
+.footer-flex {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.footer-flex div {
+  display: flex;
+  gap: 7px;
+}
+.footer-flex p {
+  font-size: 14px;
+  font-weight: 500;
+  color: #ffffff;
+  opacity: 0.6;
+}
+.rights {
+  font-size: 14px;
+  font-weight: 500;
+  color: #ffffff;
+  opacity: 0.6;
+  padding-top: 20px;
+  /* padding-bottom: 10px; */
 }
 /*--------------- Responsive for small device ------------ */
 @media screen and (max-width: 576px) {
@@ -277,6 +318,54 @@
     justify-content: center;
     align-items: center;
     gap: 15px;
-  
+  }
+  /* ----footer responsive ---- */
+  .footer-head {
+    font-size: 17px;
+    font-weight: 700;
+    color: #ffffff;
+    padding-bottom: 6px;
+  }
+  .footer-img {
+    position: relative;
+  }
+  .footer-wave {
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    left: 34%;
+    bottom:15px;
+  }
+  .footer-flex {
+    /* display: flex;
+    gap: 6px;
+    align-items: center;
+    justify-content: center; */
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 6px;
+  }
+  .footer-flex div {
+    display: flex;
+    gap: 4px;
+  }
+  .footer-flex p {
+    font-size: 6px;
+    font-weight: 500;
+    color: #ffffff;
+    opacity: 0.6;
+  }
+  .rights {
+    font-size: 6px;
+    font-weight: 500;
+    color: #ffffff;
+    opacity: 0.6;
+    padding-top: 5px;
+    /* padding-bottom: 10px; */
+  }
+  .footer-flex img{
+    width: 10px;
+    height: 10px;
   }
 }
