--- a/styles/about.css
+++ b/styles/about.css
@@ -52,18 +52,10 @@
   padding-top: 120px;
   padding: 100px 140px;
 }
-.choose-head {
-  font-size: 50px;
-  font-weight: 700;
-  color: #ffffff;
-  text-align: center;
-  padding-bottom: 60px;
-}
+
 .choose-grid-container {
   max-width: 1280px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  margin: 0 auto;
   gap: 25px;
 }
 .grid-item1 {
@@ -129,6 +121,13 @@
 .feature {
   padding: 100px 140px 160px;
 }
+.feature-head {
+  font-size: 35px;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 30px;
+}
 .feature-card iframe {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -140,13 +139,13 @@
   padding: 15px;
 }
 .feature-card h2 {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 700;
   color: #ffffff;
 }
 
 .feature-card p {
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 500;
   color: #ffffff;
   opacity: 0.6;
@@ -173,7 +172,7 @@
   padding: 10px 140px 100px;
 }
 .host-section h1 {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 700;
   color: #ffffff;
   text-align: center;
@@ -254,49 +253,100 @@
   padding-top: 20px;
   /* padding-bottom: 10px; */
 }
-/*--------------- Responsive for small device ------------ */
+.footer-flex img {
+  background-color: #533c72;
+}
+/*--------------- ---------------------Responsive for small device ------------------------------------- */
 @media screen and (max-width: 576px) {
+  /*-------- About section -------- */
   .about-section {
     padding: 10px 20px;
   }
   .about-section h1 {
-    font-size: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
+    font-size: 35px;
   }
   .about-section .about-des {
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 20px;
+    padding-top: 10px;
     font-size: 12px;
-
+    line-height: 20px;
     opacity: 80%;
   }
   .about-des1 {
     font-size: 12px;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    line-height: 20px;
   }
   .about-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding-top: 100px;
-    gap: 30px;
-    padding-left: 40px;
+    gap: 20px;
+    text-align: center;
+    padding-bottom: 60px;
+    padding-top: 50px;
   }
+
   .about-list h2 {
-    font-size: 30px;
+    font-size: 33px;
     font-weight: 700;
     color: #00ff88;
   }
   .about-list p {
-    font-size: 10px;
+    font-size: 13px;
     font-weight: 500;
     color: #ffffff;
     opacity: 0.8;
   }
-  /*----------  hose section ----- */
+  /*---------- Feature section ------------*/
+  .feature {
+    padding: 100px 40px 160px;
+  }
+  .feature-card iframe {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    width: 346px;
+    height: 200px;
+  }
+
+  .card-btm {
+    box-shadow: 0 1px 1px #9361d4;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding: 15px;
+  }
+  .feature-card h2 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #ffffff;
+  }
+
+  .feature-card p {
+    font-size: 12px;
+    font-weight: 500;
+    color: #ffffff;
+    opacity: 0.6;
+    padding-top: 6px;
+    padding-bottom: 5px;
+  }
+  .icon-time {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .clock-icon {
+    width: 20px;
+    height: 20px;
+  }
+  .time {
+    font-size: 100px;
+    color: #00ff88;
+  }
+  /*----------  host section ----- */
   .host-section {
     padding: 10px 14px;
   }
@@ -319,6 +369,55 @@
     align-items: center;
     gap: 15px;
   }
+  /* --------Choose Section---------- */
+  .choose-section {
+    padding: 100px 14px;
+  }
+
+  .grid-item1,
+  .grid-item2,
+  .grid-item3,
+  .grid-item4,
+  .grid-item5 {
+    grid-row: auto;
+    grid-column: auto;
+    border-radius: 40px;
+    box-shadow: 0 1px 1px #9361d4;
+  }
+  .grid-card1 {
+    padding: 50px 20px 35px;
+  }
+  .grid-card2 {
+    padding: 20px;
+  }
+  .grid-card2 h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .grid-card2 p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffffff;
+    line-height: 24px;
+    opacity: 0.6;
+  }
+  .grid-card1 h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .grid-card1 p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffffff;
+    line-height: 24px;
+    opacity: 0.6;
+  }
   /* ----footer responsive ---- */
   .footer-head {
     font-size: 17px;
@@ -334,7 +433,7 @@
     text-align: center;
     align-items: center;
     left: 34%;
-    bottom:15px;
+    bottom: 15px;
   }
   .footer-flex {
     /* display: flex;
@@ -342,7 +441,7 @@
     align-items: center;
     justify-content: center; */
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 6px;
   }
@@ -364,7 +463,7 @@
     padding-top: 5px;
     /* padding-bottom: 10px; */
   }
-  .footer-flex img{
+  .footer-flex img {
     width: 10px;
     height: 10px;
   }
