--- a/styles/nav.css
+++ b/styles/nav.css
@@ -10,8 +10,8 @@
 .bg-color1 {
   background-color: #1a0b2e;
 }
-.bg-color2{
-  background-color: #230E3D;
+.bg-color2 {
+  background-color: #230e3d;
 }
 body {
   max-width: 1600px;
@@ -29,21 +29,21 @@ nav {
   display: flex;
 }
 .nav-list p {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   margin-right: 20px;
   color: white;
 }
 .nav-head {
-  font-size: 40px;
+  font-size: 37px;
   font-weight: 600;
   color: white;
 }
 .btn {
   font-size: 16px;
   font-weight: 600;
-  padding: 10px 16px;
-  border-radius: 10000px;
+  padding: 12px 16px;
+  border-radius: 1000px;
   background: linear-gradient(to right, #f9d7d7, #fb09b4);
   color: white;
   border: none;
@@ -123,14 +123,14 @@ nav {
 .banner-2nd-btn {
   font-size: 16px;
   font-weight: 600;
-  padding: 16px;
+  padding: 12px 16px;
   border-radius: 10000px;
   /* background: linear-gradient(to right, #f9d7d7, #fb09b4); */
   color: #00ff88;
   border: 2px solid #00ff88;
   background-color: transparent;
 }
-/* -------------Responsive Design for small device ------------ */
+/* ------------------------Responsive Design for small device ------------------------- */
 @media screen and (max-width: 576px) {
   nav {
     margin: 0 30px;
@@ -142,23 +142,23 @@ nav {
   .hamburger-menu {
     display: inline;
   }
-  /* Header section */
+  /*--------- Header section ----------*/
   .banner-parent {
     position: relative;
     padding-bottom: 160px;
   }
   .banner-child-1 {
     position: absolute;
-    top: 30px;
-    left: 154px;
+    top: 22px;
+    left: 162px;
   }
   .banner-child-2 {
     position: absolute;
     top: 50px;
-    left: 182px;
+    left: 199px;
   }
   .banner-child1 {
-    width: 80px;
+    width: 100px;
   }
   .banner-child2 {
     width: 22px;
@@ -171,8 +171,8 @@ nav {
     border-radius: 1000px;
     font-size: 8px;
     font-weight: 600;
-    left: 212px;
-    top: 25px;
+    left: 225px;
+    top: 22px;
   }
   .banner-div {
     position: absolute;
@@ -190,8 +190,8 @@ nav {
   .banner-des {
     font-size: 10px;
     /* max-width: 250px;*/
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 80px;
+    padding-right: 80px;
     font-weight: 500;
     color: #ffffff;
     padding-top: 7px;
@@ -220,10 +220,20 @@ nav {
   .btn {
     font-size: 10px;
     font-weight: 600;
-    padding: 2px 12px;
-    border-radius: 10000px;
+    padding: 1px 12px;
+    border-radius: 1000px;
     background: linear-gradient(to right, #f9d7d7, #fb09b4);
     color: white;
     border: none;
+  }
+  .banner-2nd-btn {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 8px 14px;
+    border-radius: 10000px;
+    /* background: linear-gradient(to right, #f9d7d7, #fb09b4); */
+    color: #00ff88;
+    border: 2px solid #00ff88;
+    background-color: transparent;
   }
 }
