--- a/styles/about.css
+++ b/styles/about.css
@@ -49,7 +49,6 @@
 }
 /*------------------------- Choose section------------- */
 .choose-section {
-  padding-top: 120px;
   padding: 100px 140px;
 }
 
@@ -61,26 +60,26 @@
 .grid-item1 {
   grid-row: 1 / span 2;
   border-radius: 40px;
-  box-shadow: 0 1px 1px #9361d4;
+  box-shadow: 0 1px 3px #9361d4;
 }
 .grid-item2 {
   grid-column: 2 / span 2;
-  box-shadow: 0 1px 1px #9361d4;
+  box-shadow: 0 1px 3px #9361d4;
   border-radius: 40px;
 }
 .grid-item3 {
-  box-shadow: 0 1px 1px #9361d4;
+  box-shadow: 0 1px 3px #9361d4;
   border-radius: 40px;
   grid-column: 2 / span 2;
 }
 .grid-item4 {
-  box-shadow: 0 1px 1px #9361d4;
+  box-shadow: 0 1px 3px #9361d4;
   border-radius: 40px;
   grid-column: 1 / span 2;
 }
 .grid-item5 {
   border-radius: 40px;
-  box-shadow: 0 1px 1px #9361d4;
+  box-shadow: 0 1px 3px #9361d4;
 }
 .grid-card1 {
   padding: 50px 20px 35px;
@@ -300,9 +299,65 @@
     color: #ffffff;
     opacity: 0.8;
   }
+  /* --------Choose Section---------- */
+  .choose-section {
+    padding: 50px 14px 40px;
+  }
+
+  .grid-item1,
+  .grid-item2,
+  .grid-item3,
+  .grid-item4,
+  .grid-item5 {
+    grid-row: auto;
+    grid-column: auto;
+    border-radius: 40px;
+    box-shadow: 0 1px 3px #9361d4;
+  }
+  .grid-card1 {
+    padding: 40px 20px 35px;
+  }
+  .grid-card2 {
+    padding: 20px;
+  }
+  .grid-card2 h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .grid-card2 p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffffff;
+    line-height: 24px;
+    opacity: 0.6;
+  }
+  .grid-card1 h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .grid-card1 p {
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffffff;
+    line-height: 24px;
+    opacity: 0.6;
+  }
   /*---------- Feature section ------------*/
   .feature {
-    padding: 100px 40px 160px;
+    padding: 40px 40px 60px;
+  }
+  .feature-head {
+    font-size: 35px;
+    font-weight: 700;
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 20px;
   }
   .feature-card iframe {
     border-top-left-radius: 20px;
@@ -348,7 +403,19 @@
   }
   /*----------  host section ----- */
   .host-section {
-    padding: 10px 14px;
+    padding: 10px 14px 70px;
+  }
+  .host-section h1 {
+    font-size: 37px;
+    font-weight: 700;
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 40px;
+  }
+  .alex {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
   }
   .host-flex {
     display: flex;
@@ -369,56 +436,10 @@
     align-items: center;
     gap: 15px;
   }
-  /* --------Choose Section---------- */
-  .choose-section {
-    padding: 100px 14px;
-  }
 
-  .grid-item1,
-  .grid-item2,
-  .grid-item3,
-  .grid-item4,
-  .grid-item5 {
-    grid-row: auto;
-    grid-column: auto;
-    border-radius: 40px;
-    box-shadow: 0 1px 1px #9361d4;
-  }
-  .grid-card1 {
-    padding: 50px 20px 35px;
-  }
-  .grid-card2 {
-    padding: 20px;
-  }
-  .grid-card2 h2 {
-    font-size: 24px;
-    font-weight: 700;
-    color: #ffffff;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .grid-card2 p {
-    font-size: 15px;
-    font-weight: 500;
-    color: #ffffff;
-    line-height: 24px;
-    opacity: 0.6;
-  }
-  .grid-card1 h2 {
-    font-size: 24px;
-    font-weight: 700;
-    color: #ffffff;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .grid-card1 p {
-    font-size: 15px;
-    font-weight: 500;
-    color: #ffffff;
-    line-height: 24px;
-    opacity: 0.6;
-  }
   /* ----footer responsive ---- */
+  footer {
+  }
   .footer-head {
     font-size: 17px;
     font-weight: 700;
