--- a/styles/about.css
+++ b/styles/about.css
@@ -197,6 +197,9 @@
   align-items: center;
   gap: 15px;
   padding-bottom: 18px;
+  opacity: 0.5;
+  color: #533c72;
+  
 }
 .host-flex {
   display: flex;
@@ -249,9 +252,15 @@
   font-weight: 500;
   color: #ffffff;
   opacity: 0.6;
-  padding-top: 20px;
+  padding-top: 10px;
   /* padding-bottom: 10px; */
 }
+.footer-divider {
+  border: none;
+  border-top: 2px solid rgb(137, 123, 123);
+  margin-bottom: 5px;
+}
+
 .footer-flex img {
   background-color: #533c72;
 }
