--- a/styles/about.css
+++ b/styles/about.css
@@ -199,7 +199,6 @@
   padding-bottom: 18px;
   opacity: 0.5;
   color: #533c72;
-  
 }
 .host-flex {
   display: flex;
@@ -448,12 +447,16 @@
 
   /* ----footer responsive ---- */
   footer {
+    padding-bottom: 40px;
+    padding-top: 30px;
   }
   .footer-head {
-    font-size: 17px;
+    font-size: 25px;
     font-weight: 700;
     color: #ffffff;
-    padding-bottom: 6px;
+    padding-bottom: 10px;
+    padding-right: 2px;
+    
   }
   .footer-img {
     position: relative;
@@ -462,31 +465,37 @@
     position: absolute;
     text-align: center;
     align-items: center;
-    left: 34%;
-    bottom: 15px;
+    /* left: 34%;
+    bottom: 15px; */
+    left: 23%;
+    bottom: 0;
   }
+
   .footer-flex {
     /* display: flex;
-    gap: 6px;
-    align-items: center;
-    justify-content: center; */
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center; */
+
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 6px;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 4px; 
+    justify-items: center; 
+    align-items: center; 
+    text-align: center;
   }
   .footer-flex div {
     display: flex;
     gap: 4px;
   }
   .footer-flex p {
-    font-size: 6px;
+    font-size: 10px;
     font-weight: 500;
     color: #ffffff;
     opacity: 0.6;
   }
   .rights {
-    font-size: 6px;
+    font-size: 10px;
     font-weight: 500;
     color: #ffffff;
     opacity: 0.6;
