--- a/styles/nav.css
+++ b/styles/nav.css
@@ -72,30 +72,36 @@ nav {
 }
 .banner-child-1 {
   position: absolute;
-  top: 160px;
-  left: 495px;
+  /* top: 160px;
+  left: 495px; */
+  top: 26%;
+  left: 39%;
 }
 .banner-child-2 {
   position: absolute;
-  top: 220px;
-  left: 586px;
+  /* top: 220px;
+  left: 586px; */
+  top: 35%;
+  left: 46.5%;
 }
 .banner-child1 {
   width: 275px;
 }
 .banner-child2 {
-  width: 90px;
+  width: 85px;
 }
 .banner-new {
   position: absolute;
   background-color: #00ff88;
   color: #1a0b2e;
-  padding: 14px;
+  padding: 9px 14px;
   border-radius: 1000px;
   font-size: 16px;
   font-weight: 600;
-  left: 700px;
-  top: 165px;
+  /* left: 700px;
+  top: 165px; */
+  top: 28%;
+  left: 56%;
 }
 .banner-div {
   position: absolute;
@@ -184,19 +190,23 @@ nav {
   }
   .banner-child-1 {
     position: absolute;
-    top: 22px;
-    left: 162px;
+    /* top: 22px;
+    left: 162px; */
+    top: 5%;
+    left: 38%;
   }
   .banner-child-2 {
     position: absolute;
-    top: 50px;
-    left: 199px;
+    /* top: 50px;
+    left: 199px; */
+    top: 13%;
+    left: 46.5%;
   }
   .banner-child1 {
     width: 100px;
   }
   .banner-child2 {
-    width: 22px;
+    width: 24px;
   }
   .banner-new {
     position: absolute;
@@ -206,15 +216,19 @@ nav {
     border-radius: 1000px;
     font-size: 8px;
     font-weight: 600;
-    left: 225px;
-    top: 22px;
+    /* left: 225px;
+    top: 22px; */
+    top: 7%;
+    left: 56%;
   }
   .banner-div {
     position: absolute;
     text-align: center;
     padding-bottom: 100px;
-    top: 125px;
-    left: 25px;
+    /* top: 125px;
+    left: 25px; */
+    top: 40%;
+    left: 2%;
   }
   .banner-head {
     font-size: 1.6rem;
